--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <link rel="stylesheet" href="index.css">
     </head>
     <body>
+        <button id="btn-el">Enter n for nxn matrix</button>
         <div class="container"></div>
         <script src="index.js"></script>
         </script>
